# react-native-olm

./: .gitmodules  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  react-native-olm.podspec  tsconfig.json
adapter/: olm_account.cpp  olm_account.h  olm_session.cpp  olm_session.h
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativesimplejsi/: OlmModule.java  OlmPackage.java
example/: App.js  User.js  package-lock.json  package.json  tsconfig.json
example/android/: build.gradle
example/android/app/src/main/java/com/example/: MainApplication.java
example/ios/: File.swift  Podfile
example/ios/OlmExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/OlmExample.xcodeproj/: project.pbxproj
example/ios/OlmExample.xcodeproj/xcshareddata/xcschemes/: OlmExample.xcscheme
example/ios/OlmExample.xcworkspace/: contents.xcworkspacedata
ios/: Olm.h  Olm.mm
jsi-adapter/: jsi_adapter.cpp  jsi_adapter.h
jsi_host_objects/: olm_account_host.cpp  olm_account_host.h  olm_session_host.cpp  olm_session_host.h
src/: Olm.ts  index.ts
